--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,7 +144,7 @@ input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webki
     -webkit-appearance: none;
 }
 fieldset {
-    border: 1px solid #aaa;
+    border: 1px solid #c0c0c0;
     margin: 0 2px;
     padding: 0.35em 0.625em 0.75em;
 }
@@ -421,7 +421,7 @@ body {
     position: relative;
     width: 16px;
     height: 2px;
-    background-color: #fff;
+    background-color: #000;
 }
 .header--nav-toggle::before {
     bottom: 5px;
@@ -443,7 +443,7 @@ body {
     color: #fff;
     font-weight: 700;
     text-transform: uppercase;
-    background-color: #0f33ff;
+    background-color: #001;
     border: none;
     opacity: 0;
     visibility: hidden;
@@ -521,7 +521,7 @@ body {
 .side-nav li:nth-child(5)::before {
     content: "05"}
 .side-nav li.is-active {
-    color: #0f33ff;
+    color: #001;
     -webkit-transition: color .4s ease-in-out;
     transition: color .4s ease-in-out;
 }
@@ -578,7 +578,7 @@ body {
     left: 0;
     width: 30px;
     height: 4px;
-    background-color: #0f33ff;
+    background-color: #001;
 }
 .intro--banner h1 {
     position: relative;
@@ -918,7 +918,7 @@ body {
     left: 200px;
     -webkit-transform: rotate(-25deg);
     transform: rotate(-25deg);
-    border: 5px solid #0f33ff;
+    border: 5px solid #001;
     border-right-color: transparent;
     border-bottom-color: transparent;
 }
@@ -931,7 +931,7 @@ body {
     transform: rotate(45deg);
     width: 10px;
     height: 10px;
-    background-color: #0f33ff;
+    background-color: #001;
 }
 .about--banner h2 {
     position: relative;
@@ -948,7 +948,7 @@ body {
     left: 268px;
     width: 30px;
     height: 30px;
-    background-color: #0f33ff;
+    background-color: #001;
     border-radius: 50%}
 .about--banner h2::after {
     content: "";
@@ -957,7 +957,7 @@ body {
     left: 255px;
     width: 10px;
     height: 10px;
-    background-color: #0f33ff;
+    background-color: #001;
 }
 .about--banner a {
     padding: 5px 17px 5px 0;
@@ -1003,7 +1003,7 @@ body {
     height: 75px;
     text-decoration: none;
     color: #000;
-    border: 10px solid #0f33ff;
+    border: 10px solid #001;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -1157,7 +1157,7 @@ body {
 }
 .contact--lockup .modal--options li:nth-child(3) {
     margin-bottom: 0;
-    background-color: #0f33ff;
+    background-color: #001;
     text-transform: uppercase;
 }
 .contact--lockup .modal--options a {
@@ -1220,7 +1220,7 @@ body {
     font-size: 16px;
     font-weight: 700;
     text-transform: uppercase;
-    background-color: #0f33ff;
+    background-color: #001;
     border: none;
     border-radius: 0;
 }
@@ -1293,8 +1293,8 @@ body {
     display: none;
 }
 .work-request--options input[type="checkbox"]:checked+label {
-    background-color: #0f33ff;
-    border-color: #0f33ff;
+    background-color: #001;
+    border-color: #001;
 }
 .work-request--options input[type="checkbox"]:checked+label svg {
     width: 15px;
@@ -1400,7 +1400,7 @@ body {
     -webkit-transform: translateZ(0) translateX(0) rotateY(0deg);
     transform: translateZ(0) translateX(0) rotateY(0deg);
     min-height: 100%;
-    outline: 30px solid #0f33ff;
+    outline: 30px solid #b8b8b8;
     -webkit-transition: -webkit-transform .4s;
     transition: -webkit-transform .4s;
     transition: transform .4s;
@@ -1425,7 +1425,7 @@ body {
 .effect-rotate-left--animate .container {
     -webkit-transform: translateZ(-1800px) translateX(-50%) rotateY(45deg);
     transform: translateZ(-1800px) translateX(-50%) rotateY(45deg);
-    outline: 30px solid #0f33ff;
+    outline: 30px solid #001;
 }
 .outer-nav {
     position: absolute;
@@ -1492,7 +1492,7 @@ body {
     width: 110%;
     height: 15px;
     opacity: 0;
-    background-color: #0f33ff;
+    background-color: #001;
 }
 .outer-nav>li.is-active::before {
     opacity: 1;
